--- a/_posts/2022-08-25-INMEDIA-支聯會拒交資料案-原稱涉公眾利益須隱去-控方審視後稱可重新披露少於20項資料.html
+++ b/_posts/2022-08-25-INMEDIA-支聯會拒交資料案-原稱涉公眾利益須隱去-控方審視後稱可重新披露少於20項資料.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/08251930-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p>警方國安處去年今日指有理由相信支聯會是「外國代理人」，引國安法《實施細則》附表5，要求7名支聯會常委提交資料被拒。已解散的支聯會前副主席鄒幸彤等5人被控「沒有遵從通知規定提供資料」罪，3人不認罪受審。由於辯方批控方以「公眾利益豁免權（PII）」為由隱去大部分資料、致令無法抗辯，案件原定今早於西九龍法院進行控方與裁判官的一對一閉門聆訊，以重新審視資料可披露的程度。惟聆訊因八號風球取消，押至今午進行，餘下審訊下周一繼續。控方今透露，經審視後有意重新披露少於20項資料，但強調無意豁免整個 PII 並披露所有文件。</p>
+<img src="https://www.inmediahk.net/files/column_images/08251930-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>警方國安處去年今日指有理由相信支聯會是「外國代理人」，引國安法《實施細則》附表5，要求7名支聯會常委提交資料被拒。已解散的支聯會前副主席鄒幸彤等5人被控「沒有遵從通知規定提供資料」罪，3人不認罪受審。由於辯方批控方以「公眾利益豁免權（PII）」為由隱去大部分資料、致令無法抗辯，案件原定今早於西九龍法院進行控方與裁判官的一對一閉門聆訊，以重新審視資料可披露的程度。惟聆訊因八號風球取消，押至今午進行，餘下審訊下周一繼續。控方今透露，經審視後有意重新披露少於20項資料，但強調無意豁免整個 PII 並披露所有文件。</p>
 <p><strong>閉門聆訊因颱風取消</strong></p>
 <p>案件周二<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%8B%92%E4%BA%A4%E8%B3%87%E6%96%99%E6%A1%88-%E6%8E%A7%E6%96%B9%E7%A8%B1%E6%94%AF%E8%81%AF%E6%9C%83%E8%88%876%E7%B5%84%E8%81%B7%E6%9C%89%E8%81%AF%E7%B9%AB-%E9%84%92%E5%B9%B8%E5%BD%A4%E6%89%B9%E6%96%87%E4%BB%B6%E9%9A%B1%E8%B3%87%E6%96%99%E7%84%A1%E5%BE%9E%E7%9B%A4%E5%95%8F">審訊</a>時傳召調查支聯會的國安處署理高級警司作供，惟所引的國安處調查報告和向警務處處長和保安局局長申請發出通知書的文件，均涉「公眾利益豁免權（PII）」而被大幅隱去（redact），辯方批無從得知控方案情的證據、無法就此作盤問。控方決定重新審視兩份文件可披露的程度，原定今早進行與裁判官的一對一閉門聆訊，以覆核早前的 PII 申請。</p>
 <p><strong>控方認調查報告從無交警務處處長</strong></p>
