--- a/_posts/2022-08-26-PQ-夏立言訪中-民進黨-對國際釋出錯誤訊號-台灣基進-國民黨敢講台灣不屬於中國.html
+++ b/_posts/2022-08-26-PQ-夏立言訪中-民進黨-對國際釋出錯誤訊號-台灣基進-國民黨敢講台灣不屬於中國.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433.jpg" alt="" class="wp-image-112008" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國民黨副主席夏立言率團訪問中國，引發台灣社會高度質疑。行政院長蘇貞昌指出，國民黨倡議要跟中國談，給國際錯誤訊息，他呼籲全民團結對外，不要給敵人長志氣、加威風，也譴責中國軍演、破壞區域和平／圖：中央社記者吳睿騏桃園機場攝  2022 年 8 月 10 日。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433.jpg" alt="" class="wp-image-112008" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/dffa74b0-1153x768_906257284433-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國民黨副主席夏立言率團訪問中國，引發台灣社會高度質疑。行政院長蘇貞昌指出，國民黨倡議要跟中國談，給國際錯誤訊息，他呼籲全民團結對外，不要給敵人長志氣、加威風，也譴責中國軍演、破壞區域和平／圖：中央社記者吳睿騏桃園機場攝  2022 年 8 月 10 日。</figcaption></figure></div>
 
 
 
