--- a/_posts/2022-08-27-VOCUS-趁紅歌未遍響-記眾聲謳翱翔.html
+++ b/_posts/2022-08-27-VOCUS-趁紅歌未遍響-記眾聲謳翱翔.html
@@ -8,4 +8,72 @@ tags: blog
 author: 關間聞
 ---
 
-<p><br></p>
+<blockquote>“……情動於中而形於言，言之不足故嗟嘆之，嗟嘆之不足故詠歌之，詠歌之不足，不知手之舞之，足之蹈之也……” 《毛詩序》</blockquote>
+<p>筆者多次撰寫文字賞析歌曲（通常一文談兩曲），以表情動於中，補償言之不足，同時發現坊間傳頌的歌詠，很多時候反映民心向背，值得反覆揣摩。</p>
+<p>今次賞析的，是《最後的信仰》（《信》）及《小心地滑》。</p>
+<img src="https://images.unsplash.com/photo-1605098801888-def2d3c129e4">
+<h3>做鬼容易做人難</h3>
+<p>前一段日子，歌手林二汶傳出種種是是非非之際，有人重提這首作品，藉此譏諷或控訴林二汶，亦意外地把這首舊作重新帶入公眾視野及YouTube日常演算。筆者刻意避開八卦，只想認識一下這首作品。不聽則已，細聽之後，驚豔非常！</p>
+<p>為甚麼我竟然錯過了這首2019年(1)推出的精彩作品？</p>
+<p>活在香港，很抱歉，真的「做鬼容易做人難」。愈執著信念，愈愁悶不爽，難怪坊間充斥各款廉價心靈雞湯，供人逃避，例如甚麼做人最緊要開心（如何恆常維持這種精神狀態？吃藥？）、沒有期望所以沒有失望（期望管理還是乾脆把希望砍掉？）……愈來愈少人直接談及信念／信仰、持守信念、為信念付出代價……等等，很懨悶。</p>
+<p>沒有信念或信念薄弱的人，連掙扎也不用了。</p>
+<p>《最後的信仰》(2)</p>
+<p>曲：藍奕邦</p>
+<p>詞：林夕</p>
+<p>唱：林二汶原唱，本文連結的是林家謙版本</p>
+<p>燈會破滅 心可撕裂 愛難以肢解 冰會酷熱 糖可苦澀 懶跟它變態</p>
+<p>對現實 怎麼踩 都不會 扭轉世界 明白血肉會崩壞 骨氣沒法被活埋</p>
+<p>來日想打妖怪 先要做人去 首先祝你心理愉快</p>
+<p>**抬頭尚有天空 敲不碎 埋頭尚有智慧 思想 他人難偷取 軟弱無力全是 堅忍的證據</p>
+<p>靈魂內有信仰 搶不去 這種搶匪也許 比你畏懼 想保無邪之軀 還是必須好好過下去**</p>
+<p>可以戰敗 不可收買 信人會失敗 從來未信 犧牲尊嚴 竟可跳出魔界</p>
+<p>鬥命長 多出街 怪物來 不必見怪 無論鐵路會崩壞 方向未會被活埋</p>
+<p>殘夢歸於烏有 還有這心態 信最後善良留在世界</p>
+<p>Repeat **</p>
+<p>比較《信》的原初版本，有一段歌詞在林家謙版本中沒有唱出來：</p>
+<p>抬頭尚有天空 敲不碎 埋頭尚有智慧 思想 他人難偷取 痛恨無能為力 也沒有不對</p>
+<p>只需要 死不去 流淚都必須喝水 信未來 死不去 仍舊有你我戰鬥的生趣</p>
+<p>沒有勸人立時勇猛奮進，改變世界，幹一番事業，《信》透過平和的音符，展示非常非常卑微的要求。世界太艱難，血肉之軀會崩壞，戰士會戰敗……怎麼辦？退而求其次，用心堅守靈魂裡那一片領土：一個別人偷不走、移不掉的一點信念／信仰。</p>
+<p>多讀一點當代中國史，就知道眼前沒有樂觀的理由。這個大背景下，守住信念，很艱難。微弱的信念，如何抵抗大數據、監控評分系統、並接踵而來的群眾運動？</p>
+<p>然而奉上尊嚴、屈膝下拜，就可跳出魔界「做人去」？充其量，只能成為那一隻不用困籠的乖乖的貓而已(3)。</p>
+<p>林夕沒有提及某位舉頭三尺見、賞善罰惡的神靈。誰會主持公道，為你為我的信念／信仰留守到「最後」？歌曲不提供答案，信念嗎，唯有相信最後善良留在世界。</p>
+<p>放回2019年歌曲面世那天的脈絡，字字領會，句句扎心。</p>
+<h3>優雅地憤怒詛咒</h3>
+<p>香港被蹂躪，如何宣洩一腔憤怒？</p>
+<p>《信》很儒雅，《小心地滑》（《滑》）一樣盡量保持文雅，同時又毫不客氣地發飆咒罵。民間日常用語「因住收尾果幾年」、「若然未報，時辰未到」，被工整地融入歌詞。曲與詞兩者皆癲，配合得妙不可言。</p>
+<p>至於誰人在詛咒誰人，重要嗎？填詞的黃偉文是否如此構想？筆者不理會了。</p>
+<p>《小心地滑》(4)</p>
+<p>曲：徐浩</p>
+<p>詞：黃偉文</p>
+<p>唱：MC張天賦</p>
+<p>天 想我善良 良善末日 問為何就到 人間 讚頌公道 但惡霸個個 當街舞蹈</p>
+<p>是 我期待 人沒仇報 天代追討 活得不好 亦都不倒 誓與壞人們 鬥遲才入土</p>
+<p>你話變壞更易 保晚節 難道有用 起碼今晚舒泰的入睡 毋懼打風行雷 和行路會滑倒</p>
+<p>**全個世界 都有地板 別不小心 望少一眼 若水一灘 分辨到忠奸 為害的 總會有晚踏中 落地像碎蛋 鐘 雖會慢 時辰未到的 終有日還 叫好人們明白到 好人們無力撐**</p>
+<p>都有業力如大手 在暗中的撐</p>
+<p>躲得過隕石 無預兆大病 又能避嗎 如果愛下一代 願報應看中只得你吧</p>
+<p>別 恃行運 來日雷劈 穿越天花 什麼的種 什麽的瓜 自作孽回流 你能攔路嗎</p>
+<p>聽父母話 宇宙的報應 從未作罷 不要講我知道 黑共白 人類基本定律 原來是個謊話</p>
+<p>Repeat **</p>
+<p>天理亦沒法推翻</p>
+<p>像這樣咒你 也自嘆 太毒太怨太兇猛 只盼黑心 可壯膽</p>
+<p>善良乏力 才讓撒旦 來臨 狂瀾用愛無力挽</p>
+<p>還要笑嗎 請看地板 別不小心 望少一眼 滴水梯間 濕滑洗手間</p>
+<p>為害的 總會有晚踏中 落地像碎蛋</p>
+<p>好 好吃飯 閻王在轉彎 等你面談 你假如仍然未悔 陰謀仍然未散</p>
+<p>祝你盡量長壽些 病夠幾千晚</p>
+<p>天天望見無恥嘴臉，即使明知詛咒這個動作很阿Q，但總要讓情緒有出口。況且，「惡有惡報，時辰就到；倫常乖舛，立見消亡；德不配位，必有災殃」，其實也是蟻民「最後的信仰」，警戒我們別同流合污、安心作孽；另一方面守住本份、靜待黎明。</p>
+<p>相信上帝，或順應共業，都會對此共鳴。</p>
+<h3>不講不港 卻仍舊講舊港</h3>
+<p>昔日明室遺民「八大山人」，署名其書畫，總把八大山人四字潦草直寫，望之難辨究竟寫下「哭之」或「笑之」。部份香港的填詞人，似乎正在步其後塵，有些事不便明言，留待曲筆告之。</p>
+<p>由《一起》／《風的形狀》／《係咁先啦》(5)(6)，以至《最後的信仰》／《小心地滑》，這些涉及香港人題材的歌謠，歌詞都是一字不提「香港」。談香港，不見香港二字，固然是一種創作上的手段意趣，展示歌詞「放諸四海，皆有其玩味」的能耐，是文字功力的炫耀。另一方面，「不講不港」的內容，同時亦反映了一種噤聲的狀態。舊有香港被閹割凌遲，懷念都被誣蔑成戀殖之惡，唯有選擇含沙射影，靠大家心領神會。</p>
+<p>筆者承認，上述解讀十分主觀，填詞人有權有理由呼冤，指斥我穿鑿附會。</p>
+<p>趁「紅歌、黨頌」還未響遍香港每一角落，學會多欣賞這類曉有趣味別意的歌謠，緊記那種翱翔自由，本來就屬於我們，不是由大人物施捨的。</p>
+<p>我就是天天在謳歌，鄙視和斥罵你和你們的！</p>
+<p>註/延伸閱讀：</p>
+<p>(1) 《專訪林二汶：來日想打妖怪，先要做人去》 (端傳媒，16/10/2020) https://theinitium.com/article/20201016-culture-eman-lam-music/</p>
+<p>(2) 《林家謙〈最後的信仰〉(原唱：林二汶) Live @Chill Club》 (YouTube) https://youtu.be/n_VwZ9r28Fk</p>
+<p>(3) 《聖公會管浩鳴以主人與貓形容中港關係籲通過政改方案》 (經濟日報，8/6/2015) https://topick.hket.com/article/ 612473/聖公會管浩鳴以主人與貓形容中港關係籲通過政改方案</p>
+<p>(4) 《MC 張天賦 - 小心地滑》 (YouTube) https://youtu.be/FlsxLlozYdw</p>
+<p>(5) 《如何唱一首香港的歌？》 https://vocus.cc/article/5ebb8554fd897800014dcdaf</p>
+<p>(6) 《樂意飄泊或離開舞會？賞析〈風的形狀〉與〈係咁先啦〉》 https://vocus.cc/article/61420429fd89780001d1048c</p>
