--- a/_posts/2022-08-30-INMEDIA-李家超北上前夕-微博網民洗板狠批疫情失控-能別害深圳嗎.html
+++ b/_posts/2022-08-30-INMEDIA-李家超北上前夕-微博網民洗板狠批疫情失控-能別害深圳嗎.html
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p>深圳疫情告急，香港日前卻宣布，在內地就讀大學的香港學生將納入內地陸路口岸「人文關懷通道」名額，進入內地；學生另可以循航空公司優先訂購內地機票，亦即北上升學的學生有望向大學報讀和開學。李家超更宣布明日北上商討通關安排，微博網民就趁李家超開post，反映訴求。</p>
 <p>最多微博網民讚好的是「四大訴求」，該網民要求「否定通過放任算然感染病毒提高免疫力」、不再放寬縮短高風險地區旅格入境檢疫安排、不應讓確診者居家隔離、又要求收緊防控措施。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/27558ANs74" title="螢幕快照 2022-08-30 下午3.44.20"><img src="https://live.staticflickr.com/65535/52321821334_8391604f5e_z.jpg" width="586" alt="螢幕快照 2022-08-30 下午3.44.20" /></a></p>
-<p><strong>內地生不滿港大學恢復授</strong></p>
+<p><strong>內地生不滿港大學恢復面授</strong></p>
 <p>內地不同城市都因疫情被封，相比香港陸續開放，甚至逐步與國際接軌，一直存在不滿。有微博網民看到李家超與新加坡副總理王瑞杰見面相片，留言批評「天天搞些有的沒的，香港疫情禍及深圳，我們好多經銷商在深圳的啊，還讓不讓我們大陸的企業活了啊。這新特首行不行啊」。</p>
 <p>除了不滿香港大學生返回內地恢課，亦有在香港就讀的內地學生反映，「管管疫情吧，大陸學生的健康也很重要，學校堅持面授，把我們弄過去又不能保障我們安全，理工昨天105例確診，真的不知道要怎樣面授」。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
